# Copyright (C) 2019 Alexandros Theodotou <alex at zrythm dot org>
#
# This file is part of Zrythm
#
# Zrythm is free software: you can redistribute it and/or modify
# it under the terms of the GNU Affero General Public License as published by
# the Free Software Foundation, either version 3 of the License, or
# (at your option) any later version.
#
# Zrythm is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU Affero General Public License for more details.
#
# You should have received a copy of the GNU Affero General Public License
# along with Zrythm.  If not, see <https://www.gnu.org/licenses/>.

option (
  'enable_profiling',
  type: 'boolean',
  value: false,
  description: 'Enable profiling with gprof')

option (
  'enable_tests',
  type: 'boolean',
  value: false,
  description: 'Whether to compile unit tests')

option (
  'enable_gui_tests',
  type: 'boolean',
  value: false,
  description: 'Whether to compile GUI unit tests')

option (
  'enable_ffmpeg',
  type: 'boolean',
  value: false,
  description: 'Compile with ffmpeg (for MP3 support)')

option (
  'enable_portaudio',
  type: 'boolean',
  value: false,
  description: 'Compile with portaudio support')

option (
  'enable_rtmidi',
  type: 'boolean',
  value: false,
  description: 'Compile with RtMidi support')

option (
  'enable_rtaudio',
  type: 'boolean',
  value: false,
  description: 'Compile with RtAudio support')

option (
  'enable_sdl',
  type: 'boolean',
  value: false,
  description: 'Compile with SDL2 backend support')

option (
  'enable_carla',
  type: 'boolean',
  value: false,
  description: 'Use Carla to wrap some plugins')

option (
  'enable_jack',
  type: 'boolean',
  value: true,
  description: 'Compile with JACK support')

option (
  'enable_graphviz',
  type: 'boolean',
  value: true,
  description: 'Compile with GraphViz support (for exporting graphs)')

option (
  'gen_dev_docs',
  type: 'boolean',
  value: false,
  description: 'Generate HTML developer docs')

option (
  'manpage',
  type: 'boolean',
  value: false,
  description: 'Build and install manpage')

option (
  'user_manual',
  type: 'boolean',
  value: false,
  description: 'Build and install user manual')

option (
  'strict_flags',
  type: 'boolean',
  value: false,
  description: 'Compile and link with strict flags (-Werror)')

option (
  'install_dseg_font',
  type: 'boolean',
  value: true,
  description: '''Install the DSEG14 font used by the
transport meters. Packagers should turn this off and
set the font as a dependency instead''')

option (
  'windows_release',
  type: 'boolean',
  value: false,
  description: 'Turn this on when creating the installer')

option (
  'mac_release',
  type: 'boolean',
  value: false,
  description: 'Turn this on when creating the installer')

option (
  'trial_ver',
  type: 'boolean',
  value: false,
  description: 'Whether this is a trial version with limited functionality')

option (
  'enable_guile',
  type: 'boolean',
  value: true,
  description: 'Build with libguile support for scripting')

option (
  'guile_snarf_docs_path',
  type: 'string',
  value: '',
  description: '''Path to guile-snarf-docs (used
when generating documentation for the scripting
interface). This is found in the libguile subdir of
the guile distribution after compiling it.''')
