gsettings_SCHEMAS = online.alextee.zrythm.gschema.xml
EXTRA_DIST = $(gsettings_SCHEMAS)

# desktop file
desktopdir = $(datadir)/applications
desktop_DATA = zrythm.desktop

#the application icon
appicondir=$(datadir)/icons/hicolor/scalable/apps
appicon_DATA = $(top_srcdir)/resources/z.svg

@GSETTINGS_RULES@
